--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11305,3 +11305,7 @@ textarea.form-control-lg {
   width: 280px;
   border: 1px solid lightgrey;
 }
+
+.invalid-feedback {
+  display: block !important;
+}
